--- a/style.css
+++ b/style.css
@@ -22,14 +22,14 @@ h1{
     font-family: sans-serif;
     font-size: 5em;
     letter-spacing: 0.2em;
-    /*transform: translate(-50%);*/
+    /*transform: translateY(-50%);*/
 }
 
 h1 span{
     display: inline-block;
     filter: blur(1px);
-    opacity: 100;
-    animation: animacion 5s linear forwards;
+    opacity: 0;
+    animation: animacion 1s linear forwards;
     
 }
 @keyframes animacion{
@@ -39,9 +39,9 @@ h1 span{
         transform: rotateY(90deg);
     }
     100%{
-        filter: blur(50px);
-        opacity: 0;
-        transform: rotateY(0deg);
+        filter: blur(0);
+        opacity: 1;
+        transform: rotateX(0deg);
     }
 }
 
